fix z-index snafu

--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -23,7 +23,9 @@
 
 .window {
 
-  z-index: 600;
+  &.game-window {
+    z-index: 700;
+  }
 
   &.character-select {
     min-height: 215px;
